tests/negative/parallel_for_i64max.far
fun main() {
  parallel for i in 0..9223372036854775807 { }
  return 0
}
